loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:1: error: type mismatch;
 found   : Boolean
 required: Int
for (compteur <-1 to estSurBiscuit ) {
                     ^