loopfor.LoopFor.scala.code
for (compteur <-1 to estSurBiscuit ) {
  forward();
}
prendBiscuit();
